@@ -198,7 +198,7 @@ int main(void)
 {
 	struct allocated_counter const * it;
 
-	setenv("OPROFILE_EVENTS_FILE_DIR", OPROFILE_SRCDIR "/events", 1);
+	setenv("OPROFILE_EVENTS_DIR", OPROFILE_SRCDIR "/events", 1);
 
 	for (it = tests; it->cpu_type != CPU_NO_GOOD; ++it) {
 		do_test(it);
